test/files/neg/t0899.check
t0899.scala:9: error: super may be not be used on value o
  override val o = "Ha! " + super.o
                                  ^
t0899.scala:11: error: super may be not be used on variable v
  super.v = "aa"
        ^
t0899.scala:12: error: super may be not be used on variable v
  println(super.v)
                ^
three errors found
